--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
-  "name": "solidity-ts-dev-stack-example",
-  "version": "0.0.2",
-  "description": "",
+  "name": "solidity-only-owner-of-nft",
+  "version": "0.0.1",
+  "description": "Implement a modifier checking msg.sender is the owner of target NFT",
   "main": "index.js",
   "scripts": {
     "build": "npm run clean && npm run compile",
@@ -10,36 +10,29 @@
     "test": "npx hardhat test",
     "coverage": "npm run build && npx hardhat coverage --temp artifacts --network coverage"
   },
-  "repository": {
-    "type": "git",
-    "url": "git+https://github.com/rhlsthrm/solidity-ts-dev-stack-example.git"
-  },
-  "author": "rhlsthrm",
-  "license": "MIT",
-  "bugs": {
-    "url": "https://github.com/rhlsthrm/solidity-ts-dev-stack-example/issues"
-  },
-  "homepage": "https://github.com/rhlsthrm/solidity-ts-dev-stack-example#readme",
+  "author": "bokeh.eth",
+  "license": "UNLICENSED",
   "devDependencies": {
     "@nomiclabs/hardhat-ethers": "^2.0.2",
-    "@nomiclabs/hardhat-etherscan": "^2.1.2",
+    "@nomiclabs/hardhat-etherscan": "^3.0.3",
     "@nomiclabs/hardhat-waffle": "^2.0.1",
-    "@typechain/ethers-v5": "^7.0.0",
-    "@typechain/hardhat": "^2.0.0",
+    "@typechain/ethers-v5": "^10.0.0",
+    "@typechain/hardhat": "^6.0.0",
     "@types/chai": "^4.2.18",
     "@types/chai-as-promised": "^7.1.1",
-    "@types/mocha": "^8.2.2",
-    "@types/node": "^15.0.3",
+    "@types/mocha": "^9.1.0",
+    "@types/node": "^17.0.23",
     "chai": "^4.3.4",
     "chai-as-promised": "^7.1.1",
-    "dotenv": "^9.0.2",
+    "dotenv": "^16.0.0",
     "ethereum-waffle": "^3.3.0",
     "ethers": "^5.1.4",
     "hardhat": "^2.2.1",
+    "openzeppelin-solidity": "^4.5.0",
     "solidity-coverage": "^0.7.16",
     "ts-generator": "^0.1.1",
-    "ts-node": "^9.1.1",
-    "typechain": "^5.0.0",
+    "ts-node": "^10.7.0",
+    "typechain": "^8.0.0",
     "typescript": "^4.2.4"
   }
 }
